@@ -6,6 +6,9 @@ Version 1.2.5+svn:
    * updated DejaVuSans font to version 2.18
  * misc:
    * added some extra headers for the upcomming gcc 4.3 (debian bug #417764)
+   * the unit name generation could with different locales call get_random() a
+     different number of times. This lead to different names and traits.
+     Changed to call random a fixed number of times which fixes the traits.
 
 Version 1.2.5:
  * campaigns:
